Correction of the collapse-Container

--- a/src/utils/styles/style.scss
+++ b/src/utils/styles/style.scss
@@ -103,53 +103,55 @@ nav{
 }
 .collapse__container{
   display: flex;
-  justify-content: center;
-  margin: 30px 0px;
-  .collapse{
-    width: 1023px;
-    display: grid;
-    .collapse__header{
-      background-color: $main-color;
-      padding: 10px 20px 10px 15px;
-      border-radius: 5px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      .collapse__title{
-        font-size: 24px;
-        font-weight: 500;
-        color: $white;
-      }
-      .collapse__open--btn{
-        background-color: inherit;
-        border: 0;
-      }
-      .animate{
-        animation: rotateBtn 100ms ease-in-out both alternate;
-      }
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  margin: 38px;
+}
+.collapse{
+  width: 1023px;
+  display: grid;
+  .collapse__header{
+    background-color: $main-color;
+    padding: 10px 20px 10px 15px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .collapse__title{
+      font-size: 24px;
+      font-weight: 500;
+      color: $white;
     }
-    .collapse__body{
-      transform: scaleY(0);
-      visibility: hidden;
-      max-height: 0;
-      transform-origin: top;
-      overflow: hidden;
-      background-color: $grey;
-      border-radius: 0px 0px 5px 5px;
-      .collapse__description{
-        margin: 20px 20px 10px 15px;
-        color: $main-color;
-        font-size: 18px;
-        font-weight: 400;
-      }
+    .collapse__open--btn{
+      background-color: inherit;
+      border: 0;
+    }
+    .animate{
+      animation: rotateBtn 100ms ease-in-out both alternate;
     }
   }
-  .open-background{
-    animation: openCollapse 300ms ease-in-out both;
+  .collapse__body{
+    transform: scaleY(0);
+    visibility: hidden;
+    max-height: 0;
+    transform-origin: top;
+    overflow: hidden;
+    background-color: $grey;
+    border-radius: 0px 0px 5px 5px;
+    .collapse__description{
+      margin: 20px 20px 10px 15px;
+      color: $main-color;
+      font-size: 18px;
+      font-weight: 400;
+    }
   }
-  .open-text{
-    animation: showTextCollapse 300ms ease-in-out both;
-  }
+}
+.open-background{
+  animation: openCollapse 300ms ease-in-out both;
+}
+.open-text{
+  animation: showTextCollapse 300ms ease-in-out both;
 }
 
 @keyframes showTextCollapse {
@@ -215,28 +217,29 @@ nav{
     }
   }
   .collapse__container{
-    margin: 20px 19px;
-   .collapse{
+    margin: 15px;
+    gap: 20px;
+  }
+  .collapse{
+    width: 100%;
     .collapse__header{
-      margin: 0 10px;
       padding: 10px;
       .collapse__title{
         font-size: 13px;
       }
       .collapse__open--btn{
+        padding: 0;
         img{
           height: 15px;
         }
       }
     }
-     .collapse__body{
-       margin: 0 10px ;
-       .collapse__description{
-        margin: 19px 20px;
-         font-size: 12px;
-       }
-     }
-   }
+    .collapse__body{
+      .collapse__description{
+        margin: 15px 20px 20px 20px;
+        font-size: 12px;
+      }
+    }
   }
 }
 
